opam-version: "2.0"
name: "bm25"
synopsis: "An implementation of Okapi BM25 (a search engine)"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/robur-coop/stem"
doc: "https://robur-coop.github.io/stem/"
bug-reports: "https://github.com/robur-coop/stem/issues"
depends: [
  "ocaml"    {>= "5.1.0"}
  "dune"     {>= "2.9.0"}
  "miou"
  "flux"
  "stem"     {= version}
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/robur-coop/stem.git"
x-maintenance-intent: [ "(latest)" ]
pin-depends: [
  [ "flux" "git+https://github.com/robur-coop/flux.git#527a116071a93a221219d85b3f638d320f6ca93a" ]
]
