opam-version: "2.0"
name: "stem"
synopsis: "A stemmer of words for few languages"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/stem"
doc: "https://dinosaure.github.io/stem/"
bug-reports: "https://github.com/dinosaure/stem/issues"
depends: [
  "ocaml"    {>= "5.1.0"}
  "dune"     {>= "2.9.0"}
  "miou"
  "logs"
  "fmt"
  "re"
  "uutf"
  "uucp"
  "bstr"
  "cmdliner"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/dinosaure/stem.git"
x-maintenance-intent: [ "(latest)" ]
